Fixing 100vh on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,7 +100,7 @@ html {
   overflow: hidden; }
 
 body {
-  height: auto;
+  height: 100%;
   width: 100vw;
   overflow-x: hidden;
   display: flex;
@@ -109,7 +109,7 @@ body {
 
 .container {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   max-width: 1920px;
   display: grid;
@@ -246,7 +246,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 50%;
-    height: 100vh;
+    height: 100%;
     width: auto;
     transform: translateX(-50%); }
   @media screen and (min-width: 1024px) {
