--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -4,7 +4,7 @@ html{
     overflow: hidden;
 }
 body{
-    height: auto;
+    height: 100%;
     width: 100vw;
     overflow-x: hidden;
     display: flex;
@@ -13,7 +13,7 @@ body{
 }
 .container{
     position: relative;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     max-width: 1920px;
     display: grid;
