--- a/src/sass/components/_image.scss
+++ b/src/sass/components/_image.scss
@@ -7,7 +7,7 @@
         position: absolute;
         bottom: 0;
         left: 50%;
-        height: 100vh;
+        height: 100%;
         width: auto;
         transform: translateX(-50%);
     }
